<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gearshifthome"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        tools:context="com.example.sibertt.carmeetapplication1.Home">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/carmeets"
            android:layout_height="wrap_content"
            android:id="@+id/CarMeetTitle"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textSize="56sp"
            />

        <Button
            android:id="@+id/CarMeetNo.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CarMeetTitle"
            android:layout_marginTop="32dp"
            android:background="#FFFFFF"
            android:text="@string/carmeet1"
            android:textSize="40sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CarMeetNo.2"
            android:layout_marginTop="16dp"
            android:id="@+id/CarMeetNo.3"
            android:background="#FFFFFF"
            android:text="@string/carmeet3"
            android:textSize="40sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CarMeetNo.3"
            android:layout_marginTop="16dp"
            android:id="@+id/CarMeetNo.4"
            android:background="#FFFFFF"
            android:text="@string/carmeet4"
            android:textSize="40sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CarMeetNo.4"
            android:layout_marginTop="16dp"
            android:id="@+id/CarMeetNo.5"
            android:background="#FFFFFF"
            android:text="@string/carmeet5"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/CarMeetNo.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CarMeetNo.1"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:text="@string/carmeet2"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/CarMeetTitle"
            android:layout_toEndOf="@+id/CarMeetTitle"
            android:background="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout1"


            >
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:id="@+id/ProfilePicture"
                android:background="@drawable/userpicture"
                tools:ignore="ContentDescription"/>

            <Button
                android:id="@+id/MyProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myProfile"
                android:textSize="12sp"/>
            <Button
                android:layout_width="88sp"
                android:layout_height="wrap_content"
                android:id="@+id/MyMessagesButton"
                android:text="@string/myMessages"
                android:textSize="12sp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MyFriendsButton"
                android:text="@string/myFriends"
                android:textSize="12sp" />


        </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout1"
        android:text="@string/makeAMeetVert"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>

    </RelativeLayout>



