<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:id="@+id/locationLayout"
        android:background="#607D8B"
        android:padding="16sp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lz"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:id="@+id/lzTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lzTV"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/directions"
            android:textSize="20sp"
            android:gravity="center"
            android:background="#8BC34A"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/infoLayout"
        android:layout_width="402dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_weight="2"
        android:background="@drawable/cminfo">

        <TextView
            android:id="@+id/infoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16sp"
            android:text="@string/info"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/infoTV"
            android:layout_marginBottom="16sp"
            android:text="@string/date"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dateTV"
            android:layout_marginBottom="16sp"
            android:text="@string/time"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/timeTV"
            android:text="@string/host"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rsvpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#607D8B"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/rsvp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:id="@+id/RSVPTV"/>

        <Button
            android:id="@+id/CMbackbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/RSVPbutton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/RSVPbutton"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="#B71C1C"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#000000"
            android:textSize="24sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rsvpB"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="#000000"
            android:background="#8BC34A"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:id="@+id/RSVPbutton"
            android:layout_below="@+id/CMbackbutton"
            />

    </RelativeLayout>

</LinearLayout>